--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "eslint-config-trybe-frontend": "^1.2.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-sonarjs": "^0.10.0"
   }
 }
