--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "11.1.2",
     "eslint-config-trybe-frontend": "^1.2.1",
     "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-sonarjs": "^0.10.0"
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "sass": "^1.39.2"
   }
 }
